--- a/.github/workflows/update_epg.yml
+++ b/.github/workflows/update_epg.yml
@@ -40,5 +40,5 @@ jobs:
       - name: 推送更改
         uses: ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.PAT_TOKEN }}
           branch: ${{ github.ref }}
